# dataclass-binder

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/dataclass_binder/: __init__.py  _impl.py
tests/: example.py  test_formatting.py  test_parsing.py
